# jdic

./: .gitignore  CMakeLists.txt  README.md  schema.sql
src/: array.c  array.h  jdic.c  jdic.h  jmdict.c  jmdict.h  util.c  util.h
tools/: initdb  sqle
